--- a/appinfo.json
+++ b/appinfo.json
@@ -4,10 +4,16 @@
         ""
     ],
     "companyName": "tony05159@gmail.com",
-    "longName": "Tour Guides",
+    "longName": "TourGuides",
     "projectType": "native",
     "resources": {
         "media": [
+            {
+                "file": "images/pebble_icon.png",
+                "menuIcon": true,
+                "name": "ICON",
+                "type": "png"
+            },
             {
                 "file": "images/Thumbs Up.PNG",
                 "name": "Thumbs_Up",
@@ -20,7 +26,7 @@
             }
         ]
     },
-    "shortName": "Tour Guides",
+    "shortName": "TourGuides",
     "uuid": "7db27e9d-63db-454d-a32a-74a188175e30",
     "versionCode": 1,
     "versionLabel": "1.0",
